# smite

./: Cargo.toml  README.md
.github/workflows/: afl-e2e.yml  rust.yml
bindings/go/: nyx_runner.go
scripts/: cln-coverage-report.sh  coverage-report.sh  enable-vmware-backdoor.sh  setup-nyx.sh  smite-orchestrator.py  symbolize-crash.sh
smite/: Cargo.toml
smite-ir/: Cargo.toml
smite-ir-e2e-test/: Cargo.toml
smite-ir-e2e-test/src/: main.rs
smite-ir-mutator/: Cargo.toml
smite-ir-mutator/src/: lib.rs
smite-ir-mutator/tests/: afl_custom_mutator_e2e.rs
smite-ir/src/: builder.rs  context.rs  generators.rs  instruction.rs  lib.rs  minimizers.rs  mutators.rs  operation.rs  program.rs  tests.rs  variable.rs
smite-ir/src/generators/: channel_announcement.rs  channel_ready.rs  channel_update.rs  funding_created.rs  funding_flow.rs  node_announcement.rs  open_channel.rs
smite-ir/src/minimizers/: cse.rs  dead_code.rs
smite-ir/src/mutators/: generator_insert.rs  input_swap.rs  instruction_delete.rs  instruction_reorder.rs  operation_param.rs  splice.rs  splice_insert.rs
smite-nyx-sys/: build.rs
smite-nyx-sys/src/: jvm-crash-handler.c  lib.rs  nyx-agent.c  nyx-crash-handler.c  nyx.h
smite-scenarios/: Cargo.toml
smite-scenarios/src/: bitcoind.rs  executor.rs  lib.rs  scenarios.rs  targets.rs
smite-scenarios/src/scenarios/: encrypted_bytes.rs  init.rs  ir.rs  noise.rs  raw_bytes.rs  setup.rs
smite-scenarios/src/targets/: cln.rs  eclair.rs  ldk.rs  lnd.rs
smite/src/: bitcoin.rs  bolt.rs  channel_tx.rs  lib.rs  noise.rs  pending_channel.rs  process.rs  runners.rs  scenarios.rs  tx_builder.rs
smite/src/bolt/: accept_channel.rs  accept_channel2.rs  announcement_signature.rs  announcement_signatures.rs  attribution_data.rs  channel_announcement.rs  channel_ready.rs  channel_reestablish.rs  channel_update.rs  closing_complete.rs  closing_sig.rs  commitment.rs  commitment_signed.rs  error.rs  error_msg.rs  funding_created.rs  funding_signed.rs  init.rs  mod.rs  node_announcement.rs  open_channel.rs  open_channel2.rs  ping.rs  pong.rs  revoke_and_ack.rs  shutdown.rs  tlv.rs  tx_abort.rs  tx_add_input.rs  tx_add_output.rs  tx_remove_input.rs  tx_remove_output.rs  tx_signatures.rs  types.rs  update_add_htlc.rs  update_fail_malformed_htlc.rs  warning.rs  wire.rs
smite/src/channel_tx/: commitment.rs  funding.rs
smite/src/noise/: connection.rs  error.rs  handshake.rs  mod.rs  tests.rs
smite/src/tx_builder/: commitment.rs  funding.rs
smitebot/: Cargo.toml  README.md  sample-campaign.toml
smitebot/src/: commands.rs  config.rs  latency_stats.rs  libnyx.rs  main.rs  state.rs  tmux.rs  utils.rs
smitebot/src/commands/: bench_exec.rs  build.rs  config.rs  doctor.rs  mod.rs  print_ir.rs  start.rs  status.rs
smitebot/src/utils/: file_ops.rs
workloads/cln/: Dockerfile  Dockerfile.coverage
workloads/cln/patches/: syncblocks.patch
workloads/eclair/: Dockerfile  Dockerfile.coverage  init.sh
workloads/eclair/eclair-sancov/src/main/java/: EclairEdgeCounter.java  EclairSanCov.java
workloads/ldk/: Cargo.toml  Dockerfile  Dockerfile.coverage  init.sh
workloads/ldk/src/: main.rs
workloads/lnd/: Dockerfile  Dockerfile.coverage  init.sh  sancov.go
workloads/lnd/lnd-scenario/: main.go
