[workspace]
resolver = "3"
members = ["smite", "smite-nyx-sys", "smite-scenarios"]
exclude = ["workloads/ldk"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
log = "0.4"
simple_logger = { version = "5", default-features = false }
secp256k1 = { version = "0.31", features = ["std"] }
