[workspace]
resolver = "3"
members = [
  "smite",
  "smite-ir",
  "smite-ir-mutator",
  "smite-nyx-sys",
  "smite-scenarios",
]
exclude = ["workloads/ldk"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
log = "0.4"
rand = { version = "0.10", default-features = false }
simple_logger = { version = "5", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
bitcoin = "0.32"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
