[package]
name = "smite-ir-mutator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smite-ir = { path = "../smite-ir" }
rand.workspace = true
postcard.workspace = true
log.workspace = true
simple_logger.workspace = true
