[package]
name = "smite-scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nyx = ["smite/nyx", "dep:smite-nyx-sys"]
active-scenario = []
encrypted-bytes = ["active-scenario"]
noise = ["active-scenario"]


[[bin]]
name = "cln"
required-features = ["active-scenario"]

[[bin]]
name = "lnd"
required-features = ["active-scenario"]

[[bin]]
name = "ldk"
required-features = ["active-scenario"]

[[bin]]
name = "eclair"
required-features = ["active-scenario"]

[lints]
workspace = true

[dependencies]
smite = { path = "../smite" }
smite-nyx-sys = { path = "../smite-nyx-sys", optional = true }

log.workspace = true
simple_logger.workspace = true
secp256k1.workspace = true

hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
