[package]
name = "smite-scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nyx = ["smite/nyx", "dep:smite-nyx-sys"]

[lints]
workspace = true

[dependencies]
smite = { path = "../smite" }
smite-ir = { path = "../smite-ir" }
smite-nyx-sys = { path = "../smite-nyx-sys", optional = true }

log.workspace = true
simple_logger.workspace = true
thiserror.workspace = true
bitcoin.workspace = true

hex = "0.4"
libc = "0.2"
serde.workspace = true
serde_json = "1"
tempfile = "3"
