[package]
name = "smite"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nyx = ["dep:smite-nyx-sys"]

[lints]
workspace = true

[dependencies]
log = "0.4"
simple_logger = { version = "5", default-features = false }

# Noise protocol crypto dependencies (BOLT 8)
chacha20poly1305 = { version = "0.10", default-features = false, features = [
  "alloc",
] }
hkdf = "0.12"
sha2 = "0.10"
secp256k1 = { version = "0.31", features = ["std"] }

smite-nyx-sys = { path = "../smite-nyx-sys", optional = true }

# Process management (Unix only - Windows not supported)
nix = { version = "0.30", default-features = false, features = [
  "signal",
  "process",
] }

[dev-dependencies]
hex = "0.4"
