[package]
name = "smitebot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
